# pylabels2

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
demos/: address_label.py  addresses.py  labeldef.py  qr.py
django_demo/: README.md
labels/: sheet.py
labels/predefined/: __init__.py  __main__.py  avery.py
labels/tests/: test_predefined_specs.py
pylabels/: sheet.py
pylabels/demos/django_demo/project/: db.sqlite3
pylabels/demos/django_demo/project/barcode_app/: barcode.py
